2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Only handle the control keys
	  in the snooper func.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: fixed key snooper id.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 445395 -
	  drag/drop text in editor".

2009-02-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.csproj: Flush.

	* Mono.TextEditor/TextEditor.cs: Include the key & state in
	  OnIMProcessedKeyPressEvent calls if possible, i.e. if the
	  char matches the unprocessed one, since the IMMultiContext
	  captures a lot of the character keystrokes.

2009-02-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextEditor.cs: Handle UTF32 code points from
	  IMContext. Don't pass most recent keypress through with
	  IMContext multi-press commits, so that it doesn't append the
	  space/enter that was used to terminate the multi-press
	  input.

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: enabled the preview editor
	  string.

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/SimpleEditMode.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor/UnicodePreviewEditMode.cs: Made the preview
	  string more general (input method now handles it).

2009-02-17  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj:
	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/SimpleEditMode.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor/UnicodePreviewEditMode.cs: Worked on unicode
	  preview (but disabled it).

2009-02-17  Mike Krüger  <mkrueger@novell.com>
